refactor(controller): 提取指标转换逻辑到专用转换器
将 MetricsDashboardController 中的重复转换逻辑提取到新的 MetricsConverter 组件中，以遵循单一职责原则并提高代码复用性。